--- a/FrontendGlamcart/src/assets/css/Contact.css
+++ b/FrontendGlamcart/src/assets/css/Contact.css
@@ -1,6 +1,3 @@
-/*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
 
 .contact .info-box {
     color: #444444;
@@ -11,7 +8,7 @@
   }
   .contact .info-box i {
     font-size: 32px;
-    color: #e03a3c;
+    color: #FFC0CB;
     border-radius: 50%;
     padding: 8px;
     border: 2px dotted #f8d4d5;
@@ -37,7 +34,7 @@
   .contact .php-email-form .error-message {
     display: none;
     color: #fff;
-    background: #ed3c0d;
+    background: #FFC0CB;
     text-align: left;
     padding: 15px;
     font-weight: 600;
@@ -91,7 +88,7 @@
     padding: 12px 15px;
   }
   .contact .php-email-form button[type='submit'] {
-    background: #e03a3c;
+    background: #FFC0CB;
     border: 0;
     padding: 10px 32px;
     color: #fff;
@@ -99,7 +96,7 @@
     border-radius: 4px;
   }
   .contact .php-email-form button[type='submit']:hover {
-    background: #e35052;
+    background: #FFC0CB;
   }
   @-webkit-keyframes animate-loading {
     0% {
