--- a/FrontendGlamcart/src/assets/css/admin/ManageCategory.css
+++ b/FrontendGlamcart/src/assets/css/admin/ManageCategory.css
@@ -1,70 +1,76 @@
-.manage-category-page{
-    background: #f1f5f9;
-    padding-bottom: 2rem;
-    min-height: 100vh;
-}
-
-.category-header{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style-type: none;
+    text-decoration: none;
+  }
+  
+  .manage-category-page {
+    background: #f0f4f7;
+    display: flex;
+  }
+  
+  .category-right {
+    height: 100vh;
+    width: 80vw;
+    position: relative;
+    /* margin-left: 20vw; */
+  }
+  
+  .category-header {
     display: flex;
     position: fixed;
-    height: 12vh;
-    width: 79vw;
+    height: 10vh;
+    width: 85vw;
     justify-content: space-between;
+    align-items: center;
     padding: 1rem 1.5rem;
-    background-color: white;
-    border-radius: 14px;
-    box-shadow: 10px 10px 10px -1px rgba(119, 111, 93, 0.52);
-}
-
-.category-right{
-    width: 79vw;
-    position: relative;
-    margin-left: 19.7vw;
-    margin-bottom: 20rem;
-}
-
-.search-wrapper2{
-    border: 1px solid #ccc;
-    border-radius: 30px;
-    height: 50px;
-    width: 20vw;
+    background-color: #2d4059;
+    border-radius: 1px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #ffffff;
+  }
+  
+  .category-header h1 {
+    font-size: 1.8rem;
+    color: #808080;
+  }
+  
+  .category-header span {
+    font-size: 1.2rem;
+  }
+  
+  .search-wrapper2 {
+    margin: 20px;
     display: flex;
     align-items: center;
-    overflow-x: hidden;
-}
-
-.search-wrapper2 span{
-    display: inline-block;
-    padding: 0.7rem 0 0 1rem;
-    font-size: 1.5rem;
-}
-
-.search-wrapper2 input{
-    height: 100%;
-    padding: 0 1rem;
-    font-family: "Gilroy Regular";
-    font-size: 1rem;
-    letter-spacing: 0.6px;
-    border: none;
+  }
+  
+  .search-wrapper2 input {
+    width: 300px;
+    padding: 10px;
+    border: 2px solid #4d5e70;
+    border-radius: 20px;
     outline: none;
-}
-
-.user-wrapper2{
+    font-size: 1rem;
+    margin-right: 10px;
+  }
+  
+  .user-wrapper2 {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.user-wrapper2 img{
+  }
+  
+  .user-wrapper2 img {
     border-radius: 50%;
     margin-right: 1rem;
-}
-
-.user-wrapper2 small{
-    display: inline-block;
-    color: rgb(246, 172, 172);
-}
-
+  }
+  
+  .user-wrapper2 small {
+    color: #808080;
+  }
 .btn1{
     height: 9vh;
     width: 100%;
