--- a/FrontendGlamcart/src/components/Footer/footer.css
+++ b/FrontendGlamcart/src/components/Footer/footer.css
@@ -16,7 +16,7 @@
     font-weight: 700;
   }
   #footer .footer-top .footer-contact h3 span {
-    color: #e03a3c;
+    color: #FFC0CB;
   }
   #footer .footer-top .footer-contact p {
     font-size: 14px;
@@ -36,7 +36,7 @@
     display: block;
     width: 20px;
     height: 2px;
-    background: #e03a3c;
+    background: #FFC0CB;
     bottom: 0;
     left: 0;
   }
@@ -103,14 +103,14 @@
     background: none;
     font-size: 16px;
     padding: 0 20px;
-    background: #e03a3c;
+    background: #FFC0CB;
     color: #fff;
     transition: 0.3s;
     border-radius: 0 4px 4px 0;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   }
   #footer .footer-newsletter form input[type='submit']:hover {
-    background: #e35052;
+    background: #FFC0CB;
   }
   #footer .credits {
     padding-top: 5px;
@@ -131,7 +131,7 @@
     transition: 0.3s;
   }
   #footer .social-links a:hover {
-    background: #e03a3c;
+    background: #FFC0CB;
     color: #fff;
     text-decoration: none;
   }
