--- a/FrontendGlamcart/src/assets/css/admin/AdminDashboard.css
+++ b/FrontendGlamcart/src/assets/css/admin/AdminDashboard.css
@@ -104,12 +104,12 @@
 
 .d-card-left h3 {
   font-size: 2.2rem;
-  color: #ff6f61;
+  color: #FFC0CB;
   margin: 0;
 }
 
 .dashboard-cards span {
   font-size: 2rem;
   margin-bottom: 8px;
-  color: #ff6f61;
+  color: #FFC0CB;
 }
