--- a/FrontendGlamcart/src/assets/css/Contact.css
+++ b/FrontendGlamcart/src/assets/css/Contact.css
@@ -1,4 +1,4 @@
-
+/* 
 .contact .info-box {
     color: #444444;
     text-align: center;
@@ -114,4 +114,4 @@
       transform: rotate(360deg);
     }
   }
-  
+   */
