--- a/FrontendGlamcart/src/assets/css/Login.css
+++ b/FrontendGlamcart/src/assets/css/Login.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh; /* Adjust the height as needed */
-    background-image: url('/Users/puja/Movies/Software Dev/src/images/logbg1.jpg'); /* Replace with the actual path */
+    height: 100vh; 
+    background-image: url('/src/Images/bg1.jpg'); 
     background-size: cover;
     background-position: center;
     color: #fff; 
@@ -21,7 +21,7 @@
       width: 400px;
       margin: 20px;
       padding: 20px;
-      border: 1px solid #d09097;
+      border: 1px solid #FFC0CB;
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
@@ -36,19 +36,20 @@
       padding: 8px;
       margin-bottom: 15px;
       box-sizing: border-box;
+      color: #0b0c0b;
     }
     
     .user-login-button {
       background-color: #88398e;
-      color: rgb(62, 50, 50);
+      color: rgb(29, 28, 28);
       padding: 10px;
-      border: none;
+      border:1px solid #d09097; 
       border-radius: 5px;
       cursor: pointer;
     }
     
     .user-login-button:hover {
-      background-color: #3f463f;
+      background-color: #0b0c0b;
     }
     
     .user-login-forgot-password {
@@ -65,5 +66,4 @@
       text-decoration: underline;
     }
     
-    /* Add any additional styling you need for error messages or other elements */
-    
+   
