--- a/FrontendGlamcart/src/assets/css/admin/ManageCategory.css
+++ b/FrontendGlamcart/src/assets/css/admin/ManageCategory.css
@@ -1,197 +1,162 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style-type: none;
-    text-decoration: none;
-  }
+
+.manage-category-page {
+  background: #f0f4f7;
+  display: flex;
+}
+
+.category-right {
+  height: 100vh;
+  width: 80vw;
+  position: relative;
   
-  .manage-category-page {
-    background: #f0f4f7;
-    display: flex;
-  }
-  
-  .category-right {
-    height: 100vh;
-    width: 80vw;
-    position: relative;
-    /* margin-left: 20vw; */
-  }
-  
-  .category-header {
-    display: flex;
-    position: fixed;
-    height: 10vh;
-    width: 85vw;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 1.5rem;
-    background-color: #2d4059;
-    border-radius: 1px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    color: #ffffff;
-  }
-  
-  .category-header h1 {
-    font-size: 1.8rem;
-    color: #808080;
-  }
-  
-  .category-header span {
-    font-size: 1.2rem;
-  }
-  
-  .search-wrapper2 {
-    margin: 20px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .search-wrapper2 input {
-    width: 300px;
-    padding: 10px;
-    border: 2px solid #4d5e70;
-    border-radius: 20px;
-    outline: none;
-    font-size: 1rem;
-    margin-right: 10px;
-  }
-  
-  .user-wrapper2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .user-wrapper2 img {
-    border-radius: 50%;
-    margin-right: 1rem;
-  }
-  
-  .user-wrapper2 small {
-    color: #808080;
-  }
+}
+
+.category-header {
+  display: flex;
+  position: fixed;
+  height: 10vh;
+  width: 85vw;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem;
+  background-color: #2d4059;
+  border-radius: 1px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  color: #ffffff;
+}
+
+.category-header h1 {
+  font-size: 1.8rem;
+  color: #808080;
+}
+
+.category-header span {
+  font-size: 1.2rem;
+}
+
+.search-wrapper2 {
+  margin: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.search-wrapper2 input {
+  width: 300px;
+  padding: 10px;
+  border: 2px solid #4d5e70;
+  border-radius: 20px;
+  outline: none;
+  font-size: 1rem;
+  margin-right: 10px;
+}
+
+.user-wrapper2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.user-wrapper2 img {
+  border-radius: 50%;
+  margin-right: 1rem;
+  padding-right: 20px;
+}
+
+.user-wrapper2 small {
+  color: #808080;
+}
 .btn1{
-    height: 9vh;
-    width: 100%;
-    display: flex;
-    justify-content: right;
-    padding-right: 1.5rem;
-    border-radius: 12px;
+  height: 9vh;
+  width: 100%;
+  display: flex;
+  justify-content: right;
+  padding-right: 1.5rem;
+  border-radius: 12px;
 }
 
 button{
-    font-size: 1.3rem;
-    font-family: "Bebas Neue";
-    font-weight: 500;
-    padding: 5px 0 0 0 ;
-    width: 15vw;
-    height: 8vh;
-    background: #d0b3b7;
-    cursor: pointer;
-    border: none;
-    color: #1c1919;
-    box-shadow: 10px 10px 10px -1px rgba(10,99,169,0.16);
-    border-radius: 12px;
-    transition: all ease 0.2s;
+  font-size: 1.3rem;
+  font-family: "Bebas Neue";
+  font-weight: 500;
+  padding: 5px 0 0 0 ;
+  width: 15vw;
+  height: 8vh;
+  background: #d0b3b7;
+  cursor: pointer;
+  border: none;
+  color: #1c1919;
+  box-shadow: 10px 10px 10px -1px rgba(10,99,169,0.16);
+  border-radius: 12px;
+  transition: all ease 0.2s;
 }
 
 button:hover{
-    background: #443f39;
-    color: #d09097;
-    box-shadow: 10px 10px 10px -1px rgb(169, 132, 160);
+  background: #443f39;
+  color: #d09097;
+  box-shadow: 5px 2px 2px rgb(169, 132, 160);
 }
 
 .btn1 span{
-    margin-right: 4px;
-    color: white;
+  margin-right: 4px;
+  color: white;
 }
 .btn1 button:hover span{
-    color: #d09097;
+  color: #d09097;
 }
 
 .category-main-content{
-    width: 77vw;
-    padding-top: 15vh;
+  width: 77vw;
+  padding-top: 15vh;
 }
 
 
 .card-header2 h2{
-    margin: -2rem 0 -.5rem 2.2rem;
-    text-decoration: underline;
-}
-
-.id-box2{
-    min-width: 8rem;
-    border: 1rem #969393;
-}
-
-.name-box2{
-    min-width: 20rem;
-}
-
-.edit-box2{
-    min-width: 12rem;
-}.delete-box2{
-     min-width: 12rem;
- }
-
-.edit-btn2, .delete-btn2{
-    padding: 6px 0 0 0 ;
-    width: 5vw;
-    height: 3vw;
-    border-radius: 10px;
-    margin: -1rem 1rem -1.2rem 2.3rem;
-}
-
-.delete-btn2:hover{
-    background: #443f39;
-    color: #d09097;
-    box-shadow: 10px 10px 10px -1px rgb(211, 164, 164);
+  margin: -2rem 0 -.5rem 2.2rem;
+  text-decoration: underline;
 }
 
 /*css fro add-category-modal*/
 body.active-modal {
-    overflow-y: hidden;
+  overflow-y: hidden;
 }
 .add-category-modal, .add-category-overlay {
-    width: 80vw; height: 100vh; top: 0; left: 0; right: 0; bottom: 0; position: fixed; z-index: 101;
-    backdrop-filter: blur(3px);
+  width: 80vw; height: 100vh; top: 0; left: 0; right: 0; bottom: 0; position: fixed; z-index: 101;
+  backdrop-filter: blur(3px);
 }
 .add-category-modal-content {
-    position: absolute; top: 40%; left: 50%; transform: translate(-50%, -50%); line-height: 1.4;
-    background: #d0b3b7;
-    padding: 14px 28px; border-radius: 10px;  font-size: 1.1rem;
-    width: 30vw;   height: 55vh;   z-index: 109;  text-decoration: underline;
+  position: absolute; top: 40%; left: 50%; transform: translate(-50%, -50%); line-height: 1.4;
+  background: #FFC0CB;
+  padding: 14px 28px; border-radius: 10px;  font-size: 1.1rem;
+  width: 30vw;   height: 55vh;   z-index: 109;  text-decoration: underline;
 }
 .close-add-category-btn {
-    width: 3vw;  height: 3vw; background: none; box-shadow: none; color: #222222;  border-radius: 9px;
-    position: absolute; top: 0.4rem; right: 0.4rem; padding: 7px 3px 0 3px;  margin-bottom: -20px;
+  width: 3vw;  height: 3vw; background: none; box-shadow: none; color: #222222;  border-radius: 9px;
+  position: absolute; top: 0.4rem; right: 0.4rem; padding: 7px 3px 0 3px;  margin-bottom: -20px;
 }  .close-add-category-btn:hover{ box-shadow: none; color: #831515  }
 
 .category-id-number{
-    position: absolute;   top: 5.6rem;  font-size: 1.1rem;
+  position: absolute;   top: 5.6rem;  font-size: 1.1rem;
 }
 .category-id-number input{
-    width: 25vw;   height: 5.7vh; padding-left: 0.8rem; border-color: #281e07; border-radius: 7px;
+  width: 25vw;   height: 5.7vh; padding-left: 0.8rem; border-color: #281e07; border-radius: 7px;
 }
 .category-id-number label,.category-id-number input{
-    display: block;
+  display: block;
 }
 .category-name{
-    position: absolute;  top: 12rem;
-    font-size: 1.1rem;
+  position: absolute;  top: 12rem;
+  font-size: 1.1rem;
 }
 .category-name input{
-    width: 25vw;   height: 5.7vh;  padding-left: 0.8rem;  border-color: #281e07; border-radius: 7px;
-    font-family: "Gilroy Medium";
+  width: 25vw;   height: 5.7vh;  padding-left: 0.8rem;  border-color: #281e07; border-radius: 7px;
+  font-family: "Gilroy Medium";
 }
 .category-name label,.category-name input{
-    display: block;
+  display: block;
 }
 .category-name-add-btn{
-    position: absolute; right: 2rem;  bottom: 1.5rem;
+  position: absolute; right: 2rem;  bottom: 1.5rem;
 }
 .category-name-add-btn button{
-    width: 7rem;  height: 3rem;
+  width: 7rem;  height: 3rem;
 }
